--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
 Flask==3.0.0
-
+Flask-Cors==4.0.0
+Flask-Migrate==4.0.5
+Flask-Login==0.6.3
+flask-marshmallow==0.15.0
+SQLAlchemy==2.0.23
+flask-sqlalchemy==3.1.1
+blueprint==3.4.2
+marshmallow==3.20.1
+marshmallow-sqlalchemy==0.29.0
